refactor : 리스트에 불변성 보장 - 불변성을 보장을 위해 List.of로 변경